objects/ssot__ResearchStudyRelationship__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Research Study Relation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedResearchStudyId__c</fullName>
        <label>Related Research Study</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyId__c</fullName>
        <label>Research Study</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667383862_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyRelationship_RelatedRes_rel</label>
        <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
        <relationshipLabel>ResearchStudyRelationship_RelatedRes_rel</relationshipLabel>
        <relationshipName>rel_1716667383862_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716667452096_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResearchStudyRelationship_ResearchSt_rel</label>
        <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
        <relationshipLabel>ResearchStudyRelationship_ResearchSt_rel</relationshipLabel>
        <relationshipName>rel_1716667452096_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>